--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ jp: /?lang=jp
                 </div>
             </div>
         </div>
-        <div class="recent-update-content">
+        <div class="recent-update-content drag-me">
             <h2 id="recent-updates-title">최신 업데이트</h2>
             <div id="recent-update-list"></div>
             <button id="show-more-updates-btn" class="show-more-updates-btn" style="display: none;"
